test/functions/deitz/test_default_param3.good
Error: Ambiguous call 'foo(:int)' (test_default_param3.chpl:10)
Candidates are:
  foo(i: int) (test_default_param3.chpl:1)
  foo(i: int, s: string) (test_default_param3.chpl:5)
